# ESP_VP

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  buddy_recv.py  build.py  check_ready.py  docker-compose.yml  partitions.csv  sdkconfig.defaults
.github/workflows/: esp-vp-image.yml
include/: app_config.example.h  app_config.h  esp_vp.h  stream_upload.h  tls_socket.h
src/: CMakeLists.txt  bind_server.c  device_config.c  ftps_server.c  main.c  management_server.c  mqtt_server.c  pair_button.c  proxy_status.c  ssdp.c  status_led.c  stream_upload.c  tls_socket.c  wifi.c
ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
ui/src/: App.svelte  api.ts  main.ts  styles.css  types.ts
